Enhanced the shelve command to support shelving against earlier versions & to customize the shelveset comment

--- a/com.microsoft.gittf.client.clc/src/main/resources/com/microsoft/gittf/client/clc/messages.properties
+++ b/com.microsoft.gittf.client.clc/src/main/resources/com/microsoft/gittf/client/clc/messages.properties
@@ -56,7 +56,7 @@ CheckinCommand.NoMetaDataWillBeIgnoreBecauseShallowSpecified=the --no-metadata o
 PendingChangesCommand.WorkItemDoesNotExistFormat=work item {0} does not exist
 PendingChangesCommand.WorkItemInvalidFormat=work item {0} is not valid
 PendingChangesCommand.WorkItemSpecifiedMultipleTimesFormat=work item {0} specified more than once
-CloneCommand.Argument.Bare.HelpText=Creates a "bare" git repository. The directory created will be the git repository itself, instead of creating a working directory with a .git directory underneath (Beta)
+CloneCommand.Argument.Bare.HelpText=Creates a "bare" git repository. The directory created will be the git repository itself, instead of creating a working directory with a .git directory underneath
 CloneCommand.Argument.Deep.HelpText=Performs a "deep" clone, creating commits for each TFS changeset
 CloneCommand.Argument.DepthChoice.HelpText=Creates a shallow clone of the specified depth, or a deep clone of all TFS changesets, and sets the default depth for fetch, pull, and check in operations (default: 1)
 CloneCommand.Argument.Depth.HelpText=Specifies the number of changesets to create commits for (default: 1)
@@ -142,7 +142,7 @@ Main.Command.Clone.HelpText=Initializes a git repository from a TFS path
 Main.Command.Configure.HelpText=Configures an existing git repository to add to TFS
 Main.Command.Fetch.HelpText=Fetch the latest code from TFS into FETCH_HEAD
 Main.Command.Pull.HelpText=Pulls the latest code from TFS and merge/rebase the changes into master
-Main.Command.Shelve.HelpText=Shelves the changes to a TFS folder (Beta)
+Main.Command.Shelve.HelpText=Shelves the changes to a TFS folder
 Main.Command.Shelvesets.HelpText=Lists the shelvesets available on the server. Provides a way to delete shelvesets
 Main.CommandCreationFailedFormat=could not invoke ''{0}'' command: {1}
 Main.CommandNotFoundFormat=''{0}'' is not a {1} command.  See {1} --help.
@@ -169,10 +169,13 @@ PullCommand.Argument.Resolve.HelpText=Uses the resolve strategy when merging
 PullCommand.Argument.Rebase.HelpText=Rebase master on top of the upstream changes after fetching
 PullCommand.RebaseNotSupportedWithOursAndTheirs=rebase does not currently support the --ours or --theirs options
 PullCommand.Argument.Force.HelpText=Performs a force pull and downloads the last downloaded changeset again.
-ShelveCommand.Argument.Name.HelpText=name of the shelveset to create
+ShelveCommand.Argument.Name.HelpText=Name of the shelveset to create
 ShelveCommand.Argument.Replace.HelpText=Replaces an existing shelveset of the same name
-ShelveCommand.HelpDescription=Creates a shelveset of the changes in the current HEAD as it differs from the last TFS changeset fetched (Beta)
-ShelveCommand.NoChanges=HEAD is currently at a TFS changeset, nothing to shelve
+ShelveCommand.Argument.RefSpec.HelpText=The ref spec to shelve (default: HEAD of current branch)
+ShelveCommand.Argument.Message.ValueDescription=msg
+ShelveCommand.Argument.Message.HelpText=Use the given <msg> as the shelveset comment
+ShelveCommand.HelpDescription=Creates a shelveset of the changes in the current HEAD as it differs from the last TFS changeset fetched
+ShelveCommnad.InvalidRefSpecFormat=''{0}'' is not a valid ref spec to shelve.
 ShelvesetsCommand.Argument.User.ValueDescription=owner
 ShelvesetsCommand.Argument.User.HelpText=The shelvset owner name. User '*' to query for all users.
 ShelvesetsCommand.Argument.Sort.ValueDescription=name|owner|date
