--- a/com.microsoft.gittf.core/src/main/resources/com/microsoft/gittf/core/messages.properties
+++ b/com.microsoft.gittf.core/src/main/resources/com/microsoft/gittf/core/messages.properties
@@ -134,8 +134,8 @@ PullTask.Rebase.NothingToCommitFormat=All files were fetched to commit {0}. Ther
 PullTask.Rebase.StoppedFormat=All files were fetched to commit {0}. The rebase operation was stopped, please fix the issues and run "git rebase --continue" to complete the operation.
 Pull.RebaseMergeJGITProgressMonitorFormat=jgit : {0}
 RepositoryUtil.DirectoryNotEmptyFormat=destination ''{0}'' already exists and is not empty
-RepositoryUtil.NoCommitForHead=no commit for HEAD ref (is symbolic?)
-RepositoryUtil.NoHeadRef=no HEAD ref
+RepositoryUtil.NoObjectForRefFormat=''{0}'' does not refer to a valid object id.
+RepositoryUtil.NoRefFormat=''{0}'' is not a valid ref. 
 RepositoryUtil.NotGitRepoExceptionFormat={0} is not a git repository
 RepositoryUtil.IsNotADirectoryFormat=destination ''{0}'' is not a directory
 RepositoryUtil.AmbiguousObjectFormat=could not resolve this object {0}
@@ -146,6 +146,8 @@ ShelvesetDeleteTask.ShlvesetDeletedSuccessfullyFormat=Shelveset {0} deleted succ
 ShelveDifferenceTask.ExaminingRepository=examining repository
 ShelveDifferenceTask.ShelvingDifferencesFormat=Shelving differences to {0}
 ShelveDifferenceTask.Shelving=shelving
+ShelveDifferenceTask.PreparingWorkspace=preparing workspace
+ShelveDifferencesTask.NoChangesToShelveFormat=there are no changes to shelve. All changes are part of changeset ''{0}''
 ShelvePendingChangesTask.ShelvingChangesFormat=Shelving {0} changes
 ShelvesetsDisplayTask.DownloadingShelvesets=Retrieving shelvesets
 ShelvesetsDisplayTask.NoShelvesetsFound=there were no shelvesets found on the server that match the parameters specified.
