Adding unshelve command support - Unshelve downloads the shelveset content to the git repository

--- a/com.microsoft.gittf.client.clc/src/main/resources/com/microsoft/gittf/client/clc/messages.properties
+++ b/com.microsoft.gittf.client.clc/src/main/resources/com/microsoft/gittf/client/clc/messages.properties
@@ -144,6 +144,7 @@ Main.Command.Fetch.HelpText=Fetch the latest code from TFS into FETCH_HEAD
 Main.Command.Pull.HelpText=Pulls the latest code from TFS and merge/rebase the changes into master
 Main.Command.Shelve.HelpText=Shelves the changes to a TFS folder
 Main.Command.Shelvesets.HelpText=Lists the shelvesets available on the server. Provides a way to delete shelvesets
+Main.Command.Unshelve.HelpText=Unshelves a shelveset from TFS into the repository
 Main.CommandCreationFailedFormat=could not invoke ''{0}'' command: {1}
 Main.CommandNotFoundFormat=''{0}'' is not a {1} command.  See {1} --help.
 Main.HelpCommandsFormat=The {0} commands are:
@@ -200,3 +201,8 @@ ShelvesetConsoleView.ShelvesetAssociatedWorkItemsFormat=Associated Workitems: {0
 ShelvesetConsoleView.ChangesTableHeader= Change\t\tPath
 ShelvesetConsoleView.PendingChangeFormat={0}\t\t{1}
 ShelvesetConsoleView.ShelvesetWorkItemNone=none
+UnshelveCommand.HelpDescription=Unshelves a shelveset from TFS into the repository by creating a stash for the shelveset content.
+UnshelveCommand.Argument.Apply.HelpText=Applies the unshelved content stash to the repository.
+UnshelveCommand.Argument.User.ValueDescription=owner
+UnshelveCommand.Argument.User.HelpText=The shelvset owner name.
+UnshelveCommand.Argument.Name.HelpText=Shelveset name
