--- a/com.microsoft.gittf.core/src/main/resources/com/microsoft/gittf/core/messages.properties
+++ b/com.microsoft.gittf.core/src/main/resources/com/microsoft/gittf/core/messages.properties
@@ -66,10 +66,13 @@ CloneTask.NothingToDownload=Nothing to download
 CloneTask.CannotCloneFileFormat=specified item {0} is not a folder. Please specify a valid folder 
 ConfigureRepositoryTask.ConfiguringRepository=Configuring repository
 ConfigureRepositoryTask.TFSPathNotValidFormat=specified tfs path ''{0}'' is not a valid server path
-CreateCommitTask.ChangesetNotFoundFormat=changeset {0} was not found
+CreateCommitForChangesetTask.ChangesetNotFoundFormat=changeset {0} was not found
+CreateCommitForChangesetTask.CreatingCommitFormat=Downloading changeset {0}
+CreateCommitForPendingSetsTask.LatestDownloadedChangesetNotFound=Could not find any commit downloaded from TFS. Could not create the commit in a repository not checked in TFS yet.
+CreateCommitForShelvesetTask.UnshelvingShelvesetFormat=Unshelveing shelveset ''{0}''
+CreateCommitForShelvesetTask.ShelvesetNameFormat=Shelveset : {0}
 CreateCommitTask.CouldNotLocateParentTreeFormat=could not locate parent tree {0}
 CreateCommitTask.CouldNotLocateRootTree=could not locate root tree
-CreateCommitTask.CreatingCommitFormat=Downloading changeset {0}
 CreateCommitTask.CreatingTrees=Creating trees
 CreateCommitTask.CreatingCommit=Creating commit
 CreateCommitTask.ErrorCreatingTempDirectoryMessageFormat=could not create directory {0}
@@ -82,7 +85,7 @@ DeleteWorkspaceTask.DeletingWorkspace=Cleaning up temporary items
 FetchTask.AlreadyFetchedNothingToUpdate=All files are up to date. FETCH_HEAD is up to date.
 FetchTask.AlreadyFetchedUpdateFetchHeadFormat=All files are up to date. FETCH_HEAD updated to reference changeset {0} as commit {1}.
 FetchTask.ChangesetNumberFormat=changeset {0}
-FetchTask.CouldNotDetermineVersionFormat=version {0} either does not exist for the mapped path or a later version has already been downloaded
+FetchTask.CouldNotDetermineVersionFormat=a later version has already been downloaded or version {0} either does not exist for the mapped path
 FetchTask.FetchedChangesetFormat=Downloaded changeset {0} as commit {1}.
 FetchTask.FetchedFormat=Downloaded changeset {0} as commit {1}. Updated FETCH_HEAD.
 FetchTask.FetchedMultipleFormat=Downloaded {0} changesets. Downloaded last changeset {1} as commit {2}. Updated FETCH_HEAD.
@@ -162,4 +165,9 @@ VersionSpecUtil.LabelFormat=label {0}
 VersionSpecUtil.Latest=latest changeset
 VersionSpecUtil.WorkspaceFormat=versions in workspace {0}
 WorkspaceOperationErrorListener.ErrorMessage=failed to pend changes to TFS due to the following errors. Please fix the errors and retry check in.
-UpgradeManager.upgradeFromV0ToV1.CannotCleanUpTempDirectoryFormat=cannot delete the temporary directory in {0}. Please delete it manually and try again 
+UpgradeManager.upgradeFromV0ToV1.CannotCleanUpTempDirectoryFormat=cannot delete the temporary directory in {0}. Please delete it manually and try again
+UnshelveTask.LookingUpShelveset=unshelving up shelveset
+UnshelveTask.NoShelvesetsFound=there were no shelvesets found on the server that match the parameters specified.
+UnshelveTask.MultipleShelvesetsFound=there were multiple shelvesets found matching the specified parameters. Please specify a single shelveset to unshelve.
+UnshelveTask.SuccessMessageFormat=Stash ''{0}'' has been created from shelveset ''{1}''. To apply the shelveset execute "git stash apply" or "git stash apply {0}".
+UnshelveTask.ShelvesetTagFormat=TFS_Shelveset_{0}
