Multiple bug fixes

--- a/com.microsoft.gittf.core/src/main/resources/com/microsoft/gittf/core/messages.properties
+++ b/com.microsoft.gittf.core/src/main/resources/com/microsoft/gittf/core/messages.properties
@@ -97,6 +97,7 @@ GitTFConfiguration.ToString.TfsPathFormat=TFS Server Path : {0}
 GitTFConfiguration.ToString.GatedBuildFormat=Gated Build Definition : {0}
 GitTFConfiguration.ToString.DepthFormat=Default Depth : {0}
 GitTFConfiguration.ToString.TagFormat=Tag Changeset Commits : {0}
+GitTFConfiguration.ToString.TempDirectoryFormat=Temporary Directory : {0}
 GitTFConfiguration.Shallow=Shallow
 GitTFConfiguration.Deep=Deep
 LockTask.LockFailedFormat=Could not lock {0}
@@ -150,7 +151,8 @@ ShelveDifferenceTask.ExaminingRepository=examining repository
 ShelveDifferenceTask.ShelvingDifferencesFormat=Shelving differences to {0}
 ShelveDifferenceTask.Shelving=shelving
 ShelveDifferenceTask.PreparingWorkspace=preparing workspace
-ShelveDifferencesTask.NoChangesToShelveFormat=there are no changes to shelve. All changes are part of changeset ''{0}''
+ShelveDifferencesTask.NoChangesToShelveFormat=there are no changes to shelve. All changes are part of changeset {0}
+ShelveDifferencesTask.NoChangesToShelve=there are no changes to shelve. All files are identical.
 ShelvePendingChangesTask.ShelvingChangesFormat=Shelving {0} changes
 ShelvesetsDisplayTask.DownloadingShelvesets=Retrieving shelvesets
 ShelvesetsDisplayTask.NoShelvesetsFound=there were no shelvesets found on the server that match the parameters specified.
