Minor bug fix for the scenario when configuring a repo for the first time

--- a/com.microsoft.gittf.core/src/main/resources/com/microsoft/gittf/core/messages.properties
+++ b/com.microsoft.gittf.core/src/main/resources/com/microsoft/gittf/core/messages.properties
@@ -39,7 +39,7 @@ CheckinHeadCommitTask.DeletingWorkspace=Cleaning up temporary items
 CheckinHeadCommitTask.ExaminingRepository=examining repository
 CheckinHeadCommitTask.LatestNotInTreeFormat=the latest changes (commit {0}) have been fetched but have not been merged/rebased into master yet. Please merge/rebase the latest changes into master
 CheckinHeadCommitTask.ServerPathDoesNotExistFormat=server path {0} does not exist (has it been deleted?)
-CheckinHeadCommitTask.NonLinearHistoryFormat=cannot check in - commit {0} has multiple parents, please rebase to form a linear history or use --shallow
+CheckinHeadCommitTask.NonLinearHistoryFormat=cannot check in - commit {0} has multiple parents, please rebase to form a linear history or use --shallow or --autosquash
 CheckinHeadCommitTask.CommitHasOneParentThatIsSquashedFormat=cannot check in - commit {0} has one parent {1} that has been squashed
 CheckinHeadCommitTask.NotFastForwardFormat=the repository is not up to date. Please fetch and rebase/merge changeset {0}
 CheckinHeadCommitTask.CannotCheckinToANonEmptyFolderFormat=cannot perform the initial check in against a non-empty folder. Destination {0} needs to be empty, please configure your repository against another tfs folder
