Updating the git-tf version

--- a/com.microsoft.gittf.client.clc/src/main/resources/com/microsoft/gittf/client/clc/messages.properties
+++ b/com.microsoft.gittf.client.clc/src/main/resources/com/microsoft/gittf/client/clc/messages.properties
@@ -132,7 +132,7 @@ HelpCommand.CommandNotFoundFormat=''{0}'' is not a {1} command.  See {1} --help.
 HelpCommand.HelpDescription=Displays help information for the git-tf program or the specified command.
 Main.AmbiguousCommandFormat=''{0}'' is not a {1} command.  See {1} --help.\n\nDid you mean one of these?
 Main.AmbiguousCommandListFormat=\        {0}
-Main.ApplicationVersionFormat={0} version {1}.{2}.{3}.{4}
+Main.ApplicationVersionFormat={0} version {1}
 Main.Argument.Command.HelpText=The command to run
 Main.Argument.Version.HelpTextFormat=Displays the current version of {0}
 Main.Command.Help.HelpText=Displays usage information
