Adding verbose logging for unshelve and bug fix for unshelve to account for server path case inconsistency

--- a/com.microsoft.gittf.core/src/main/resources/com/microsoft/gittf/core/messages.properties
+++ b/com.microsoft.gittf.core/src/main/resources/com/microsoft/gittf/core/messages.properties
@@ -77,6 +77,9 @@ CreateCommitTask.CreatingTrees=Creating trees
 CreateCommitTask.CreatingCommit=Creating commit
 CreateCommitTask.ErrorCreatingTempDirectoryMessageFormat=could not create directory {0}
 CreateCommitTask.TagNameFormat=TFS_C{0}
+CreateCommitForPendingSetsTask.VerboseItemsProcessedFromPendingSets=Items in the shelvesets: 
+CreateCommitForPendingSetsTask.VerboseItemsDownloadedFromPendingSets=Items downloaded from the server:
+CreateCommitForPendingSetsTask.VerboseItemsDownloadedFromPendingSetsAdds=New Items added in the shelveset:
 CreateWorkspaceTask.CreatingWorkspace=Creating TFS workspace
 CreateWorkspaceTask.WorkspaceComment=Automatically created temporary workspace for git-tf.
 CreateWorkspaceTask.CouldNotCreateTempDirFormat=could not create temporary directory {0}
