Multiple fixes for the Shelve Command

--- a/com.microsoft.gittf.client.clc/src/main/resources/com/microsoft/gittf/client/clc/messages.properties
+++ b/com.microsoft.gittf.client.clc/src/main/resources/com/microsoft/gittf/client/clc/messages.properties
@@ -148,7 +148,7 @@ Main.CommandCreationFailedFormat=could not invoke ''{0}'' command: {1}
 Main.CommandNotFoundFormat=''{0}'' is not a {1} command.  See {1} --help.
 Main.HelpCommandsFormat=The {0} commands are:
 Main.UsageFormat=usage: {0} {1}
-Main.WarningFormat=warning: {0}
+Main.WarningFormat=Warning: {0}
 PendingChangesCommand.Argument.Associate.HelpText=ID of the TFS work item to associate during check-in
 PendingChangesCommand.Argument.Associate.ValueDescription=workitem id
 PendingChangesCommand.Argument.Resolve.HelpText=ID of the TFS work item to resolve during check-in
