--- a/com.microsoft.gittf.core/src/main/resources/com/microsoft/gittf/core/messages.properties
+++ b/com.microsoft.gittf.core/src/main/resources/com/microsoft/gittf/core/messages.properties
@@ -154,8 +154,9 @@ ShelveDifferenceTask.ExaminingRepository=examining repository
 ShelveDifferenceTask.ShelvingDifferencesFormat=Shelving differences to {0}
 ShelveDifferenceTask.Shelving=shelving
 ShelveDifferenceTask.PreparingWorkspace=preparing workspace
-ShelveDifferencesTask.NoChangesToShelveFormat=there are no changes to shelve. All changes are part of changeset {0}
-ShelveDifferencesTask.NoChangesToShelve=there are no changes to shelve. All files are identical.
+ShelveDifferenceTask.UnCommittedChangesDetected=there are uncommitted changes that were detected. Uncommitted changes are ignored and not shelved. 
+ShelveDifferenceTask.NoChangesToShelveFormat=there are no changes to shelve. All changes are part of changeset {0}
+ShelveDifferenceTask.NoChangesToShelve=there are no changes to shelve. All files are identical.
 ShelvePendingChangesTask.ShelvingChangesFormat=Shelving {0} changes
 ShelvesetsDisplayTask.DownloadingShelvesets=Retrieving shelvesets
 ShelvesetsDisplayTask.NoShelvesetsFound=there were no shelvesets found on the server that match the parameters specified.
