Better message for the case of lack of permissions

--- a/com.microsoft.gittf.core/src/main/resources/com/microsoft/gittf/core/messages.properties
+++ b/com.microsoft.gittf.core/src/main/resources/com/microsoft/gittf/core/messages.properties
@@ -66,8 +66,9 @@ CloneTask.NothingToDownload=Nothing to download
 CloneTask.CannotCloneFileFormat=specified item {0} is not a folder. Please specify a valid folder 
 ConfigureRepositoryTask.ConfiguringRepository=Configuring repository
 ConfigureRepositoryTask.TFSPathNotValidFormat=specified tfs path ''{0}'' is not a valid server path
-CreateCommitForChangesetTask.ChangesetNotFoundFormat=changeset {0} was not found
-CreateCommitForChangesetTask.CreatingCommitFormat=Downloading changeset {0}
+CreateCommitForChangesetVersionSpecTask.ChangesetNotFoundFormat=changeset {0} was not found
+CreateCommitForChangesetVersionSpecTask.CreatingCommitFormat=Downloading changeset {0}
+CreateCommitForChangesetVersionSpecTask.NoContentDueToPermissionOrDestroyFormat= The contents for the item {0} could not be downloaded because you either lack read permissions or the item was destroyed.
 CreateCommitForPendingSetsTask.LatestDownloadedChangesetNotFound=Could not find any commit downloaded from TFS. Could not create the commit in a repository not checked in TFS yet.
 CreateCommitForShelvesetTask.UnshelvingShelvesetFormat=Unshelveing shelveset ''{0}''
 CreateCommitForShelvesetTask.ShelvesetNameFormat=Shelveset : {0}
