Changing the default rename mode when checking in and shelving to JustFiles

--- a/com.microsoft.gittf.client.clc/src/main/resources/com/microsoft/gittf/client/clc/messages.properties
+++ b/com.microsoft.gittf.client.clc/src/main/resources/com/microsoft/gittf/client/clc/messages.properties
@@ -153,7 +153,7 @@ PendingChangesCommand.Argument.Associate.HelpText=ID of the TFS work item to ass
 PendingChangesCommand.Argument.Associate.ValueDescription=workitem id
 PendingChangesCommand.Argument.Resolve.HelpText=ID of the TFS work item to resolve during check-in
 PendingChangesCommand.Argument.Resolve.ValueDescription=workitem id
-PendingChangesCommand.Argument.RenameMode.HelpText=The rename mode to use when pending changes. Specify either "all", "justFiles" or "none" (default: all)
+PendingChangesCommand.Argument.RenameMode.HelpText=The rename mode to use when pending changes. Specify either "all", "justFiles" or "none" (default: justFiles)
 PendingChangesCommand.Argument.RenameMode.ValueDescription=all|justFiles|none
 PendingChangesCommand.InvalidRenameModeFormat=''{0}'' is not a valid rename mode. Please specify either "all", "justFiles" or "none".
 ProductInformation.UnableToLoadVersionPropertiesResourceFormat=Unable to load version properties resource ''{0}''
