Added the ability to opt-in/out (via config) on Git Meta Data being added to TFS Changeset comments, and defined --no-metadata as the default (Fixes issue #51)

--- a/com.microsoft.gittf.client.clc/src/main/resources/com/microsoft/gittf/client/clc/messages.properties
+++ b/com.microsoft.gittf.client.clc/src/main/resources/com/microsoft/gittf/client/clc/messages.properties
@@ -38,7 +38,9 @@ CheckinCommand.Argument.Bypass.HelpText=Bypass gated check-in (requires permissi
 CheckinCommand.Argument.DepthChoice.HelpText=Creates a "deep" check-in, checking in a TFS changeset for each git commit since the latest TFS changeset (requires linear history or "--squash" or "--autosquash"), or "shallow", checking in a single changeset for all commits. If omitted, the depth value provided during clone or configure is used.
 CheckinCommand.Argument.Deep.HelpText=checks in all commits
 CheckinCommand.Argument.NoLock.HelpText=Does not take a lock on the server path before committing (dangerous)
-CheckinCommand.Argument.NoMetaData.HelpText=Does not include the git commit meta data in the changeset comment when checking in deep 
+CheckinCommand.Argument.MetaDataChoice.HelpText=Determine whether to include git commit meta data in the changeset comment when checking in deep. If omitted, value provided during configure is used.
+CheckinCommand.Argument.MetaData.HelpText=Include the git commit meta data in the changeset
+CheckinCommand.Argument.NoMetaData.HelpText=Do not include the git commit meta data in the changeset
 CheckinCommand.Argument.Shallow.HelpText=Checks in a single changeset representing the differences between the HEAD git commit and the latest TFS changeset
 CheckinCommand.Argument.Squash.ValueDescription=commit id
 CheckinCommand.Argument.Squash.HelpText=commit ID to squash when performing deep check-ins
@@ -70,6 +72,9 @@ CloneCommand.Argument.GitDir.HelpText=The repository directory to be configured.
 Command.Argument.TagChoice.HelpText=Determine whether to tag all commits that map to changesets downloaded from TFS (default: true) 
 Command.Argument.Tag.HelpText=Tag all commits that map to changesets
 Command.Argument.NoTag.HelpText=Do not tag all commits that map to changesets
+Command.Argument.MetaDataChoice.HelpText=Determine whether to include git commit meta data in changeset comments when checking in deep. (default: false)
+Command.Argument.MetaData.HelpText=Include git commit meta data in changesets
+Command.Argument.NoMetaData.HelpText=Do not include git commit meta data in changesets
 Command.Argument.Depth.ParseErrorFormat=invalid depth: ''{0}''
 Command.Argument.Help.HelpText=Displays usage information
 Command.Argument.ProjectCollection.HelpText=The TFS project collection URL
