--- a/com.microsoft.gittf.core/src/main/resources/com/microsoft/gittf/core/messages.properties
+++ b/com.microsoft.gittf.core/src/main/resources/com/microsoft/gittf/core/messages.properties
@@ -101,6 +101,7 @@ GitTFConfiguration.ToString.TfsPathFormat=TFS Server Path : {0}
 GitTFConfiguration.ToString.GatedBuildFormat=Gated Build Definition : {0}
 GitTFConfiguration.ToString.DepthFormat=Default Depth : {0}
 GitTFConfiguration.ToString.TagFormat=Tag Changeset Commits : {0}
+GitTFConfiguration.ToString.IncludeMetaDataFormat=Include Meta Data in Changeset Comments : {0}
 GitTFConfiguration.ToString.TempDirectoryFormat=Temporary Directory : {0}
 GitTFConfiguration.Shallow=Shallow
 GitTFConfiguration.Deep=Deep
