adding the mentions to checkin command, reviewed by Alex

--- a/com.microsoft.gittf.core/src/main/resources/com/microsoft/gittf/core/messages.properties
+++ b/com.microsoft.gittf.core/src/main/resources/com/microsoft/gittf/core/messages.properties
@@ -53,6 +53,8 @@ CheckinHeadCommitTask.ShallowCheckinCommentFormat=Commit {0} ({1})
 CheckinHeadCommitTask.ShallowCheckinCommentAuthorFormat= Author: {0} <{1}>
 CheckinHeadCommitTask.ShallowCheckinCommentCommitterFormat= Committer: {0} <{1}>
 CheckinHeadCommitTask.ShallowCheckinCommentDisplayTruncatedFormat=Showing only the first {0} commits messages, messages for commits between commit {1} and commit {2} have been truncated...
+CheckinHeadCommitTask.WorkItemDoesNotExistFormat=work item {0} does not exist
+CheckinHeadCommitTask.WorkItemInvalidFormat=work item {0} is not valid
 CheckinPendingChangesTask.CheckingIn=Checking in pending changes
 CheckinPendingChangesTask.GatedBuildQueuedFormat=Gated build has been queued for shelveset {0}. Please wait till build finishes and pull the latest code.
 CheckinPendingChangesTask.InvalidGatedDefinitionSpecifiedFormat=''{0}'' does not match any of the gated build definitions available 
