--- a/com.microsoft.gittf.core/src/main/resources/com/microsoft/gittf/core/messages.properties
+++ b/com.microsoft.gittf.core/src/main/resources/com/microsoft/gittf/core/messages.properties
@@ -121,6 +121,7 @@ PendDifferencesTask.PendingChanges=Pending changes
 PendDifferencesTask.PendingAdds=added files
 PendDifferencesTask.PendingDeletes=removed files
 PendDifferencesTask.PendingEdits=modified files
+PendDifferencesTask.PendingProperties=executable file attributes
 PendDifferencesTask.PendingRenames=renamed files
 PendDifferencesTask.PendFailed=Some changes could not be pended
 PendDifferencesTask.QueryingPendingChanges=collecting changes
