--- a/com.microsoft.gittf.client.clc/src/main/resources/com/microsoft/gittf/client/clc/messages.properties
+++ b/com.microsoft.gittf.client.clc/src/main/resources/com/microsoft/gittf/client/clc/messages.properties
@@ -48,9 +48,9 @@ CheckinCommand.Argument.SquashAutoSquash.HelpText=Specifies how check in should 
 CheckinCommand.Argument.Preview.HelpText=Displays a preview of the commits that will be checked in TFS
 CheckinCommand.Argument.Message.ValueDescription=msg
 CheckinCommand.Argument.Message.HelpText=Use the given <msg> as the changeset comment
-CheckinCommand.Argument.IgnoreAuthor.HelpText=Use the the current authenticated user as the changeset owner.
-CheckinCommand.Argument.KeepAuthor.HelpText=Use the commit author as the changeset owner when checking in deep. The commit author should be known to TFS either by his name or e-mail address. To use this option you should be either a TFS project administrator or have the /\u201CCheck in other users\u2019 changes/\u201D permission
-CheckinCommand.Argument.UserMap.HelpText=Specifies an absolute or relative path to a file providing mapping between Git repository commit authors and TFS user identities. To generate a template mapping file, run check in command with --keep-author option in preview mode. (default: ./USERMAP)
+CheckinCommand.Argument.IgnoreAuthor.HelpText=Use the current authenticated user as the changeset owner.
+CheckinCommand.Argument.KeepAuthor.HelpText=Use the commit author as the changeset owner when checking in deep. The commit author should be known to TFS either by his name or e-mail address. To use this option you should be either a TFS project administrator or have the "Check in other users' changes" permission.
+CheckinCommand.Argument.UserMap.HelpText=Specifies an absolute or relative path to a file providing mapping between Git repository commit authors and TFS user identities. (default: ./USERMAP) To generate a template mapping file, run the checkin command in preview mode with the --keep-author and --deep options specified.
 CheckinCommand.Argument.UserMap.ValueDescription=file path
 CheckinCommand.GatedCheckinAborted=check-in aborted, pass --bypass to bypass gated check-in
 CheckinCommand.CommitIdDoesNotExistFormat=
