Allow the git-tf clone command of using credentials saved in the global config file.

--- a/com.microsoft.gittf.client.clc/src/main/resources/com/microsoft/gittf/client/clc/messages.properties
+++ b/com.microsoft.gittf.client.clc/src/main/resources/com/microsoft/gittf/client/clc/messages.properties
@@ -73,6 +73,10 @@ CloneCommnad.InvalidPathFormat={0} is not a valid path
 CloneCommand.Argument.Shallow.HelpText=Creates a single commit for all changesets on the server.
 CloneCommand.Argument.GitDir.ValueDescription=dir
 CloneCommand.Argument.GitDir.HelpText=The repository directory to be configured. This value is required for bare repositories (default: .git)
+CloneCommand.Argument.UserName.ValueDescription=the user name
+CloneCommand.Argument.UserName.HelpText=The user name to authenticate to the server hosting the Git repository. Note that the user name is saved to the local repository config file as a plain text.
+CloneCommand.Argument.Password.ValueDescription=the user password
+CloneCommand.Argument.Password.HelpText=The user password to authenticate to the server hosting the Git repository. Note that the password is saved to the local repository config file as a plain text.
 Command.MentionsOnlyAvailableWithDeep=the --mentions argument is only available when using --deep
 Command.Argument.TagChoice.HelpText=Determine whether to tag all commits that map to changesets downloaded from TFS (default: true) 
 Command.Argument.Tag.HelpText=Tag all commits that map to changesets
